--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -68,3 +68,41 @@
 .mat-button {
   background-color: #ccc !important;
 }
+.table{
+	font-family: 'Open Sans', sans-serif;
+}
+.table-outline{
+	border: 1px solid #e5e7e8;
+}
+.table-pet-service{
+	font-size: 13px;
+}
+.table-sm-text{
+	font-size: 13px;
+}
+.table-pet-service th, .table-pet-service td{
+	padding: 8px 4px;
+}
+.table-pet-service th{
+	border: none !important;
+}
+.table-pet-service th:first-child, .table-pet-service td:first-child{
+	text-align: left;
+}
+.table-no-bordered td{
+	border: none;
+}
+.table-font-weight-600 td{
+	font-weight: 600;
+}
+.not-attempt td{
+	background: #dee2e6;
+}
+.table-avenir td{
+	font-family: 'Avenir Book';
+	font-weight: normal;
+}
+.table-avenir .active-service td{
+	font-family: 'Avenir';
+	font-weight: 600;
+}
