--- a/src/app/release/release.component.html
+++ b/src/app/release/release.component.html
@@ -25,11 +25,11 @@
                  </label> <input type="text" [(ngModel)]="promoteData.releaseName" class="form-control"
                   id="releaseName">
               </div>
-              <div class="form-group form-inline">
+              <!-- <div class="form-group form-inline">
                 <label class="release-label" for="exampleInputJiraid">Jira Id
                   </label> <input type="text" [(ngModel)]="promoteData.jiraId" class="form-control"
                   id="jiraId">
-              </div>
+              </div> -->
               <div class="form-group form-inline" *ngFor="let environment of newReleaseData.env;let i=index">
                 <label class="release-label" for="exampleInputEnvironment">{{environment.key}}
                 </label> <input type="text" [(ngModel)]="environment.val" class="form-control"
