Changes related to Policy Management ie, sending Runtime or compliant policies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         </ul>
       </div>
       <!-- /.sidebar_nav -->
-      <a href="#" class="sidebar_bottom d-flex align-items-center justify-content-between">
+      <a class="sidebar_bottom d-flex align-items-center justify-content-between">
         <span>Help</span>
         <i class="fa fa-angle-down"></i>
       </a>
