--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -131,7 +131,7 @@
                     <label>Image Source</label>
                     <select class="form-control" formControlName="imageSource"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
-                      <option *ngFor="let imageData of imageSourceData" value="{{imageData}}">{{imageData}}</option>
+                      <option *ngFor="let imageData of imageSourceData" value="{{imageData.name}}">{{imageData.name}}</option>
                     </select>
                     <span *ngIf="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched"
                       class="invalid-feedback">
@@ -202,7 +202,7 @@
                                   <span *ngIf="!pipelineArr.get('pipelinetemplate').valid && pipelineArr.get('pipelinetemplate').touched"
                                   class="help-block">Pipeline is required</span>
                                 </div>
-                                <div class="form-group mb-3 pl-5 text-muted">
+                                <!-- <div class="form-group mb-3 pl-5 text-muted">
                                   <label>Cloud Account</label>
                                   <div class="d-flex  mr-5 align-items-center">
                                     <select class="form-control" formControlName="cloudAccount"
@@ -212,7 +212,7 @@
                                   </div>
                                   <span *ngIf="!pipelineArr.get('cloudAccount').valid && pipelineArr.get('cloudAccount').touched"
                                   class="help-block">Cloud Account is required</span>
-                                </div>
+                                </div> -->
                                 <div class="form-group mb-3 pl-5 text-muted">
                                   <label>Docker Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
