changes related to analysis in deployment verification page

--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -106,3 +106,27 @@
 	font-family: 'Avenir';
 	font-weight: 600;
 }
+.serviceTable{
+  td:nth-child(1), td:nth-child(2) {
+      width: 100px;
+  }
+  td:nth-child(3) {
+      width: 50px;
+  }
+  td{
+      text-align: left;
+      border: 1px solid #ccc;
+  }
+  .bgDark{
+      background-color: #f5f6f7 !important;
+      font-weight: bold;
+  }
+  .bgLight{
+      background-color: #f1f1f1;
+      color: #666;
+      padding: 2px;
+  }
+  .cv_heighlight {
+    font-weight: 700;
+  }
+}
