--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -43,7 +43,7 @@
                       <!-- /.graph-header -->
 
                       <div class="graph-body" #areaGraph >
-                        <app-area-chart [dataSource]="data" [view]="areaGraphSize"></app-area-chart>
+                        <app-area-chart [dataSource]="mainChartData" [view]="mainChartSize"></app-area-chart>
                       </div>
                       <!-- /.graph-body -->
                     </div>
@@ -83,7 +83,7 @@
                       <!-- /.graph-header -->
 
                       <div class="graph-body" #subGraph>
-                        <app-stacket-horizontal-bar-chart [dataSource]="stackedBarGraphdata" [view]="subGraphSize"></app-stacket-horizontal-bar-chart>
+                        <app-stacket-horizontal-bar-chart [dataSource]="stackedBarGraphdata" [view]="widgetChartSize"></app-stacket-horizontal-bar-chart>
                       </div>
                       <!-- /.graph-body -->
                     </div>
@@ -203,7 +203,7 @@
                       <!-- /.graph-header -->
 
                       <div class="graph-body">
-                        <app-pie-chart [dataSource]="pieChartdata" [view]="subGraphSize"></app-pie-chart>
+                        <app-pie-chart [dataSource]="pieChartdata" [view]="widgetChartSize"></app-pie-chart>
                       </div>
                       <!-- /.graph-body -->
                     </div>
