--- a/src/app/charts/area-chart/area-chart.component.html
+++ b/src/app/charts/area-chart/area-chart.component.html
@@ -10,8 +10,8 @@
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
-  [gradient]=true
-  [autoScale]=true
+  [gradient]="gradient"
+  [autoScale]="autoScale"
   [legendPosition]="legendPosition"
   [results]="dataSource"
   (select)="onSelect($event)"
