--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -3,13 +3,13 @@
   [scheme]="colorScheme"
   [results]="dataSource"
   [animations]="animations"
-  [gradient]=true
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
+  [gradient]="gradient"
+  [xAxis]="xAxis"
+  [yAxis]="yAxis"
+  [legend]="legend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
+  [xAxisLabel]="yAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [legendPosition]="legendPosition"
   (select)="onSelect($event)"
