--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -129,8 +129,9 @@
                   <!-- /.form-group -->
                   <div class="form-group">
                     <label>Image Source</label>
-                    <select class="form-control" formControlName="imageSource"
+                    <select class="form-control" formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
+                      <option value="" [disabled]="true">Select</option>
                       <option *ngFor="let imageData of imageSourceData" value="{{imageData.name}}">{{imageData.name}}</option>
                     </select>
                     <span *ngIf="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched"
@@ -195,6 +196,7 @@
                                   <div class="d-flex  mr-5 align-items-center">
                                     <select class="form-control" formControlName="pipelinetemplate" (change)="onPipelineSelect(i,j,$event.target.value)"
                                     [ngClass]="!pipelineArr.get('pipelinetemplate').valid && pipelineArr.get('pipelinetemplate').touched ? 'is-invalid':''">
+                                      <option value="" [disabled]="true">Select</option>
                                       <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
                                     </select>
                                     <!-- <a class="text-muted ml-3 formarray_btn"><i class="fas fa-plus"></i></a> -->
@@ -216,8 +218,11 @@
                                 <div class="form-group mb-3 pl-5 text-muted">
                                   <label>Docker Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
-                                    <input type="text" class="form-control" formControlName="dockerImageName"
+                                    <select class="form-control" formControlName="dockerImageName" 
                                     [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'is-invalid':''">
+                                      <option value="" [disabled]="true">Select</option>
+                                      <option *ngFor="let dockerimages of dockerImageDropdownData" value="{{dockerimages}}">{{dockerimages}}</option>
+                                    </select>
                                   </div>
                                   <span *ngIf="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched"
                                   class="help-block">Docker Image Name is required</span>
