Changes related to widget iteration with static data

--- a/src/app/charts/area-chart/area-chart.component.html
+++ b/src/app/charts/area-chart/area-chart.component.html
@@ -2,7 +2,7 @@
   [view]="view"
   [animations]="animations"
   [scheme]="colorScheme"
-  [legend]="legend"
+  [legend]="showLegend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
   [xAxis]="xAxis"
