--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -6,7 +6,7 @@
   [gradient]="gradient"
   [xAxis]="xAxis"
   [yAxis]="yAxis"
-  [legend]="legend"
+  [legend]="showLegend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
   [xAxisLabel]="yAxisLabel"
