--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -53,9 +53,12 @@
                 </div>
                 <!-- /.col-sm-12 mb-2 -->
 
-                <div class="col-sm-4 px-1 mb-2" *ngFor = "let widget of widgetRawData;let i=index">
+                <div class="col-sm-4 px-1 mb-2" *ngFor = "let widget of widgetRawData;let widgetindex=index">
                   <div class="card border-0">
                     <div class="card-body">
+
+                      <!-- #################### Main charts codes starts ############################ -->
+
                       <div class="graph-header d-flex align-items-center justify-content-between">
                         <div class="graph-title">
                           <img src="../../assets/images/drag-dots.png" alt="dots" />
@@ -78,177 +81,47 @@
                             </div>
                           </div>
                         </div>
-                        <!-- /.graph-controls -->
                       </div>
-                      <!-- /.graph-header -->
+
+                      <!-- #################### Main charts codes ends ############################ -->
+                      
+                      <!-- #################### widget charts codes start ############################ -->
 
                       <div class="graph-body" #subGraph>
-                        <!-- <app-stacket-horizontal-bar-chart [dataSource]="stackedBarGraphdata" [view]="widgetChartSize" [chartProperty]="mainChartData.chartProperty"></app-stacket-horizontal-bar-chart> -->
-                      </div>
-                      <!-- /.graph-body -->
-                    </div>
-                    <!-- /.card-body -->
-                  </div>
-                  <!-- /.card -->
-                </div>
-                <!-- /.col-sm-4 -->
-
-                <div class="col-sm-4 px-1 mb-2">
-                  <div class="card border-0">
-                    <div class="card-body">
-                      <div class="graph-header d-flex align-items-center justify-content-between">
-                        <div class="graph-title">
-                          <img src="../../assets/images/drag-dots.png" alt="dots" />
-                          Pipeline Speed
+                        <div *ngIf="widgetChartLoading[widgetindex]" style="height: 260px">
+                          <app-loading-screen></app-loading-screen>
                         </div>
-                        <!-- /.graph-title -->
-                        <div class="graph-controls d-flex">
-                          <div class="dropdown dropdown-icon-remove">
-                            <button class="btn btn-link text-muted px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Hide labels</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Add/Edit widget</a>
-                              <a class="dropdown-item" href="#">Export to CSV</a>
-                              <a class="dropdown-item" href="#">Go to report</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Remove widget</a>
+                        <div *ngIf="!widgetChartLoading[widgetindex]">
+                          <ng-container *ngIf = "widgetChartsData[widgetindex]['type'] === undefined">
+                            <div class="graph-blank">
+                              <img src="../../assets/images/no-found.png" alt="">
+                              No data found
                             </div>
-                          </div>
-                        </div>
-                        <!-- /.graph-controls -->
-                      </div>
-                      <!-- /.graph-header -->
-
-                      <div class="graph-body">
-                        <img src="../../assets/images/graph-box3.png" class="d-block w-100" alt="img" />
-                      </div>
-                      <!-- /.graph-body -->
-                    </div>
-                    <!-- /.card-body -->
-                  </div>
-                  <!-- /.card -->
-                </div>
-                <!-- /.col-sm-4 -->
-
-                <div class="col-sm-4 px-1 mb-2">
-                  <div class="card border-0">
-                    <div class="card-body">
-                      <div class="graph-header d-flex align-items-center justify-content-between">
-                        <div class="graph-title">
-                          <img src="../../assets/images/drag-dots.png" alt="dots" />
-                          Rollback Services
-                        </div>
-                        <!-- /.graph-title -->
-                        <div class="graph-controls d-flex">
-                          <div class="dropdown dropdown-icon-remove">
-                            <button class="btn btn-link text-muted px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Hide labels</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Add/Edit widget</a>
-                              <a class="dropdown-item" href="#">Export to CSV</a>
-                              <a class="dropdown-item" href="#">Go to report</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Remove widget</a>
+                          </ng-container>
+                          <ng-container *ngIf = "widgetChartsData[widgetindex]['type'] !== undefined">
+                            <!-- switch case for widget chart start -->
+                            <div [ngSwitch]="widgetChartsData[widgetindex]['type']">
+                              <app-stacket-horizontal-bar-chart *ngSwitchCase="stackedHorizontalBar" [dataSource]="widgetChartsData[widgetindex]['dataSource']" [view]="widgetChartSize" [chartProperty]="widgetChartsData[widgetindex]['chartProperty']"></app-stacket-horizontal-bar-chart>
+                              <app-pie-chart *ngSwitchCase="pieChart" [dataSource]="widgetChartsData[widgetindex]['dataSource']" [view]="widgetChartSize" [chartProperty]="widgetChartsData[widgetindex]['chartProperty']"></app-pie-chart>
+                              
+                              <!-- default switch case -->
+                              <div class="type-not-exist" *ngSwitchDefault>
+                                <i class="fa fa-area-chart" aria-hidden="true"></i>
+                                <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                                <i class="fa fa-line-chart" aria-hidden="true"></i>
+                                <i class="fa fa-pie-chart" aria-hidden="true"></i><br>
+                                Chart type does not exist.
+                              </div>
+                             
                             </div>
-                          </div>
-                        </div>
-                        <!-- /.graph-controls -->
-                      </div>
-                      <!-- /.graph-header -->
+                            <!-- switch case for widget chart end -->
+                          </ng-container>
 
-                      <div class="graph-body">
-                        <img src="../../assets/images/graph-box4.png" class="d-block w-100" alt="img" />
+                        </div>
                       </div>
-                      <!-- /.graph-body -->
-                    </div>
-                    <!-- /.card-body -->
-                  </div>
-                  <!-- /.card -->
-                </div>
-                <!-- /.col-sm-4 -->
+                      
+                       <!-- #################### widget charts codes ends ############################ -->
 
-                <div class="col-sm-4 px-1 mb-2">
-                  <div class="card border-0">
-                    <div class="card-body">
-                      <div class="graph-header d-flex align-items-center justify-content-between">
-                        <div class="graph-title">
-                          <img src="../../assets/images/drag-dots.png" alt="dots" />
-                          Automated Verification
-                        </div>
-                        <!-- /.graph-title -->
-                        <div class="graph-controls d-flex">
-                          <div class="dropdown dropdown-icon-remove">
-                            <button class="btn btn-link text-muted px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Hide labels</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Add/Edit widget</a>
-                              <a class="dropdown-item" href="#">Export to CSV</a>
-                              <a class="dropdown-item" href="#">Go to report</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Remove widget</a>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- /.graph-controls -->
-                      </div>
-                      <!-- /.graph-header -->
-
-                      <div class="graph-body">
-                        <app-pie-chart [dataSource]="pieChartdata" [view]="widgetChartSize"></app-pie-chart>
-                      </div>
-                      <!-- /.graph-body -->
-                    </div>
-                    <!-- /.card-body -->
-                  </div>
-                  <!-- /.card -->
-                </div>
-                <!-- /.col-sm-4 -->
-
-                <div class="col-sm-4 px-1 mb-2">
-                  <div class="card border-0">
-                    <div class="card-body">
-                      <div class="graph-header d-flex align-items-center justify-content-between">
-                        <div class="graph-title">
-                          <img src="../../assets/images/drag-dots.png" alt="dots" />
-                          Manual Judgement Time
-                        </div>
-                        <!-- /.graph-title -->
-                        <div class="graph-controls d-flex">
-                          <div class="dropdown dropdown-icon-remove">
-                            <button class="btn btn-link text-muted px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Hide labels</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Add/Edit widget</a>
-                              <a class="dropdown-item" href="#">Export to CSV</a>
-                              <a class="dropdown-item" href="#">Go to report</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Remove widget</a>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- /.graph-controls -->
-                      </div>
-                      <!-- /.graph-header -->
-
-                      <div class="graph-body">
-                        <div class="graph-blank">
-                          <img src="../../assets/images/no-found.png" alt="">
-                          No data found
-                        </div>
-                      </div>
-                      <!-- /.graph-body -->
                     </div>
                     <!-- /.card-body -->
                   </div>
